--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /* max-width: 80%;
+  margin: auto; */
+  margin: 0 200px;
 }
 
 .nav-title {
@@ -40,4 +43,21 @@ nav li {
 nav a {
   text-decoration: none;
   color: #474747;
+}
+
+/* header related styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding:30px 30px  30px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.banner p{
+    width: 500px;
+}
+.banner .profile-pic{
+    width: 500px;
 }
