--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,6 +15,12 @@ body {
   font-weight: 700;
   padding: 12px 30px;
 }
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
 
 /* nav related styles */
 nav {
@@ -46,18 +52,65 @@ nav a {
 }
 
 /* header related styles */
-.header{
-    background-color: #FFF8F3;
+.header {
+  background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-    padding:30px 30px  30px 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+.new-ban {
+  display: flex;
+
+  margin-bottom: 0;
 }
-.banner p{
-    width: 500px;
+.banner {
+  padding: 0px 30px 0px 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 5px solid black; */
+  margin-bottom: 0;
 }
-.banner .profile-pic{
-    width: 500px;
+.banner p {
+  margin-bottom: 20px;
+}
+
+.banner-greetings {
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-content {
+  max-width: 785px;
+}
+.developer_img {
+  margin-left: 30px;
+}
+
+/* mainsection style */
+/* about section styles */
+
+.about {
+  padding: 131px;
+  border-radius: 10px;
+  background-color: #fff8f3;
+  width: 940px;
+  height: 350px;
+  margin: auto;
+  margin-top: 130px;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+
+  font-size: 18px;
+
+  font-weight: 400;
 }
