--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -94,17 +94,20 @@ nav a {
   margin-left: 30px;
 }
 
-/* mainsection style */
+/* main section style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* about section styles */
 
 .about {
   padding: 131px;
   border-radius: 10px;
   background-color: #fff8f3;
-  width: 940px;
-  height: 350px;
-  margin: auto;
-  margin-top: 130px;
+  /* width: 940px;
+  height: 350px; */
+  margin: 130px 0;
 }
 .section-description {
   color: #757575;
@@ -113,4 +116,11 @@ nav a {
   font-size: 18px;
 
   font-weight: 400;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-inf{
+    text-align: center;
 }
