--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -95,10 +95,13 @@ nav a {
 }
 
 /* main section style */
-main{
-    max-width: 1140px;
-    margin: 0 auto;
+main {
+  max-width: 1140px;
+  margin: 0 auto;
 }
+/* main section {
+  margin-top: 130px;
+} */
 /* about section styles */
 
 .about {
@@ -117,10 +120,36 @@ main{
 
   font-weight: 400;
 }
-.about-info-container{
-    display: flex;
-    justify-content: space-around;
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
 }
-.about-inf{
-    text-align: center;
+.about-inf {
+  text-align: center;
+}
+#what-i-do-section {
+  padding: 0px 180px;
+}
+.skills-container {
+  display: flex;
+  gap: 15px;
+  margin: 50px auto;
+}
+.skill {
+  padding: 30px;
+  /* gap: 34px;
+  box-shadow: 5px 5px 15px #e1dddb; */
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description {
+  /* width: 101px; */
+  color: #757575;
+}
+/* resume section */
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
 }
