--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -153,3 +153,30 @@ main {
   font-size: 30px;
   font-weight: 700;
 }
+.resume-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+.resume-item-description {
+  color: #757575;
+}
+.resume-item-institute {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+}
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+}
+.resume-container hr {
+  margin: 30px 0;
+}
+.download-CV{
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 113px;
+}
