--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,7 +174,7 @@ main {
 .resume-container hr {
   margin: 30px 0;
 }
-.download-CV{
+.download-CV {
   display: block;
   margin: auto;
   margin-top: 50px;
@@ -182,8 +182,38 @@ main {
 }
 
 /* footer section */
-footer{
+footer {
   display: flex;
-  background-color: #FFF8F3;
+  gap: 100px;
+  background-color: #fff8f3;
   padding: 130px 200px;
+ 
+}
+.footer-column {
+  width: 50%;
+}
+.contact input[type="text"],input[type="email"],
+textarea {
+  display: block;
+  margin-bottom: 25px;
+  padding: 18px 35px;
+  color: #757575;
+  border: none;
+  border-radius: 5px;
+  background-color:  #fff;
+  width: 100%;
+}
+.footer-title{
+  text-align: left;
+  color: #181818;
+  font-size: 35px;
+  font-weight: 700;
+}
+.footer-section-description{
+  color: #757575;
+  font-size: 18px;
+  font-weight: 400;
+}
+.social-links a{
+  margin-right: 24px;
 }
